--- a/README
+++ b/README
@@ -5,11 +5,11 @@ git clone https://github.com/xiongye77/terraform-carsales.git
 cd terraform-carsales
 cd backend
 terraform init
-terraform apply -auto-approve  # this step will create terraform backend S3 backuet and Dynamodb 
+terraform apply -auto-approve  # this step will create terraform backend S3 backuet and Dynamodb, you will find result.log in your local directory, it is my job log. 
 cd ..
 cd alb-ecs
 terraform init  # the default regin is Sydney ap-southeast-2 which defined in variables.tf file, all ami used for EC2/Bastion host are automatically get 
-terraform apply -auto-approve  # this step will create all alb/ec2/ecs/RDS/bastion host/nat gateway/EFS/SSM/Secret manager.... the output will be alb url 
+terraform apply -auto-approve  # this step will create all alb/ec2/ecs/RDS/bastion host/nat gateway/EFS/SSM/Secret manager....you will find result.log in your local directory, it is my job log. the output will be alb url 
 
 check 
 http://ALB_URL/carsales1/
