--- a/README
+++ b/README
@@ -8,9 +8,10 @@ terraform init
 terraform apply -auto-approve  # this step will create terraform backend S3 backuet and Dynamodb, you will find result.log in your local directory, it is my job log. 
 cd ..
 cd alb-ecs
-terraform init  # the default regin is Sydney ap-southeast-2 which defined in variables.tf file, all ami used for EC2/Bastion host are automatically get 
+terraform init  # the default regin is Sydney ap-southeast-2 which defined in variables.tf file, all ami used for EC2/Bastion host are automatically get. Make sure spot instance bid price is enough. 
 terraform apply -auto-approve  # this step will create all alb/ec2/ecs/RDS/bastion host/nat gateway/EFS/SSM/Secret manager....you will find result.log in your local directory, it is my job log. the output will be alb url 
 
 check 
 http://ALB_URL/carsales1/
 http://ALB_URL/carsales2/
+Remember to run terraform destroy later it will save your cost.
